hard-gists/57417446d9c2e986692b3c60069ebc45/run.log
=== Docker Run Log for 57417446d9c2e986692b3c60069ebc45 ===
Started at: Mi 29. Okt 15:56:20 CET 2025

[2025-10-29 15:56:21] START: Running container for 57417446d9c2e986692b3c60069ebc45
[2025-10-29 15:56:21] SUCCESS: Container bd593fd5677d0dcef1a677971dd601c29363de63ed3de299bccfcb0511e4264d started for 57417446d9c2e986692b3c60069ebc45
=== Container logs for 57417446d9c2e986692b3c60069ebc45 ===
  File "/snippet.py", line 158
    print tb.get_audio_gain()
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 57417446d9c2e986692b3c60069ebc45 ===
[2025-10-29 15:56:23] INFO: Container bd593fd5677d0dcef1a677971dd601c29363de63ed3de299bccfcb0511e4264d has stopped
